@@ -48,7 +48,6 @@
                             <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
                         </property>
                     </properties>
-                    
                     <includes>
                         <include>/org/uncommons/reportng/*.java</include>
                     </includes>
@@ -57,6 +56,113 @@
         </plugins>
     </build>
     <profiles>
+        <profile>
+            <id>sample-coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.7.4.201502262128</version>
+                        <executions>
+                            <execution>
+                                <id>default-prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>default-prepare-agent-integration</id>
+                                <goals>
+                                    <goal>prepare-agent-integration</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>default-report</id>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>default-report-integration</id>
+                                <goals>
+                                    <goal>report-integration</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>default-check</id>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                    <!-- implmentation is needed only for Maven 2 -->
+                                    <rule implementation="org.jacoco.maven.RuleConfiguration">
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                    <!-- implmentation is needed only for Maven 2 -->
+                                    <limit implementation="org.jacoco.report.check.Limit">
+                                    <counter>COMPLEXITY</counter>
+                                    <value>COVEREDRATIO</value>
+                                    <minimum>0.00</minimum>
+                                    </limit>
+                                    </limits>
+                                    </rule>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${surefire.version}</version>
+                        <configuration>
+                             <properties>
+                                <property>
+                                    <name>usedefaultlisteners</name>
+                                    <value>false</value>
+                                </property>
+                                <property>
+                                    <name>listener</name>
+                                    <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
+                                </property>
+                            </properties>
+                            <systemPropertyVariables>
+                                <org.uncommons.reportng.title>Sample Testing Report</org.uncommons.reportng.title>
+                                <org.uncommons.reportng.coverage-report>../../site/jacoco/index.html</org.uncommons.reportng.coverage-report>
+                            </systemPropertyVariables>
+                            <includes>
+                                <include>/org/uncommons/reportng/*.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                   
+                </plugins>
+            </build>
+            <reporting>
+                <plugins>
+                    <plugin>
+                        <!-- http://maven.apache.org/plugins/maven-surefire-report-plugin/ -->
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-report-plugin</artifactId>
+                        <version>2.18.1</version>
+                        <configuration>
+                            <showSuccess>true</showSuccess>
+                            <!-- surefire uses a new jvm, MAVEN_OPTS are ignored, so you better set the memory options here -->
+                            <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </reporting>
+        </profile>
         <profile>
             <id>sample</id>
             <properties>
